# Ag-IoT

./: README.md
AWS/DocumentDB/: README.md
AWS/DynamoDB/: README.md
AWS/DynamoDB/python/: connect.py  main.py  query.py  query1.py  scan.py
App/: README.md
App/Apps/IoT-Dashboard/: CMakeLists.txt  CMakeLists.txt.user.b3a8cce  MushroomView.cpp  MushroomView.h  MushroomView.ui  RoundGaugeGraphicsObject.cpp  RoundGaugeGraphicsObject.h  SensorsMQTT.cpp  SensorsMQTT.h  ToggleButton.cpp  ToggleButton.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
App/Apps/IoT-Dashboard/Database/: login.json  mongodb.json
App/Apps/Test/: global_pub.py  global_sub.py  local_pub.py  local_sub.py
Node-RED/: README.md  flows 3.json  flows.json  mongodbconnect.json  test.txt
QGIS/: README.md  http-qgis-server
src/CJMCU_Client/: CJMCU_Client.ino
src/In-door-node/NodeMCU/nodeMCU/: nodeMCU.ino
src/In-door-node/Uno/unoReadSensors/: unoReadSensors.ino
src/LoRa_Simple_Client_Arduino/: LoRa_Simple_Client_Arduino.ino
src/LoRa_Simple_Server_Yun/: LoRa_Simple_Server_Yun.ino
src/SI1145/: SI1145.ino
src/paho-MQTT/: CJMCU.txt  data.txt  pub.py  sub.py  sub_cjmcu.py
src/testSerial/: pub.py
src/uav-node/: README.md  main.py
test/CJMCU-6814/CJMCU/: CJMCU.ino
test/SI1145/: SI1145.ino
test/Soil-Moisture/: Soil-Moisture.ino
test/mavsdkconnect/: main.py
test/mongodbtest/: main.py
test/weatherStattion/: weatherStattion.ino
